# kalshi-signal-desk

./: .gitignore  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  render.yaml  requirements-challenge.txt  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/api_shell/: __init__.py  main.py
apps/api/api_shell/api/: __init__.py  router.py
apps/api/api_shell/api/routes/: health.py
apps/api/api_shell/core/: config.py
apps/api/api_shell/db/: __init__.py
apps/api/tests/: test_api_shell_health.py
apps/web/: package.json  tailwind.config.ts
docs/architecture/: anomaly-shutdown.md  automation-guardrails.md  execution-engine.md  execution-modes.md  explainability.md  external-enrichment.md  kalshi-integration.md  manual-approval-flow.md  mapping-engine.md  market-stream.md  monorepo-layout.md  notification-policy.md  notifier.md  overnight-alert-policy.md  overview.md  paper-trading.md  (+7 more)
services/api/: alembic.ini  pyproject.toml
services/api/app/: main.py
services/api/app/api/: deps.py  router.py
services/api/app/api/routes/: approvals.py  auth.py  automation.py  enrichments.py  execution.py  health.py  markets.py  notifications.py  orders.py  paper.py  positions.py  risk.py  signals.py  watchlist.py
services/api/app/core/: auth.py  config.py
services/api/app/db/: models.py  session.py
services/api/app/integrations/: kalshi.py
services/api/app/services/: automation.py  enrichment_reader.py  execution.py  health.py  market_data.py  notifications.py
services/api/app/services/enrichment/: adapters.py  mapping.py  schemas.py  service.py
services/api/app/services/signals/: engine.py
services/api/kalshi_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/migrations/: README  env.py
services/api/migrations/versions/: 20260420_0001_initial_platform_schema.py  20260420_0002_kalshi_core_integration.py  20260420_0003_external_enrichment_layer.py  20260420_0004_signal_engine_phase4.py  20260420_0005_notifier_phase5.py  20260420_0006_execution_controls_phase6.py  20260420_0007_selective_automation_phase7.py  20260420_0008_paper_trading_phase8.py
services/api/tests/: test_auth.py  test_automation_phase7.py  test_deployment_smoke_health.py  test_execution.py  test_execution_phase6_routes.py  test_external_enrichment_phase3.py  test_health.py  test_kalshi_core_integration.py  test_notifications.py  test_paper_trading_phase8.py  test_signal_engine.py  test_signal_phase4_routes.py
services/execution-engine/: pyproject.toml
services/execution-engine/src/execution_engine/: __init__.py  config.py  main.py  models.py
services/execution-engine/src/execution_engine/approvals/: __init__.py  state_machine.py
services/execution-engine/src/execution_engine/audit/: service.py
services/execution-engine/src/execution_engine/automation/: __init__.py  anomaly_detection.py  config.py  guards.py  models.py  policies.py  runner.py  selectors.py
services/execution-engine/src/execution_engine/orders/: service.py
services/execution-engine/src/execution_engine/paper/: __init__.py  models.py  service.py
services/execution-engine/src/execution_engine/previews/: __init__.py  service.py
services/execution-engine/src/execution_engine/reconciliation/: __init__.py  service.py
services/execution-engine/src/execution_engine/risk/: engine.py
services/external-enrichment/: pyproject.toml
services/external-enrichment/src/external_enrichment/: __init__.py  config.py  main.py  scheduler.py  service.py
services/external-enrichment/src/external_enrichment/features/: __init__.py  builders.py
services/external-enrichment/src/external_enrichment/mappers/: engine.py
services/external-enrichment/src/external_enrichment/normalizers/: __init__.py  forecast.py  news.py  sportsbook.py
services/external-enrichment/src/external_enrichment/providers/: __init__.py  base.py  forecast.py  news.py  sportsbook.py
services/market-stream/: pyproject.toml
services/market-stream/src/market_stream/: __init__.py  config.py  main.py  persistence.py  service.py
services/notifier/: pyproject.toml
services/notifier/src/notifier/: config.py  dedupe.py  delivery.py  health.py  main.py  models.py  policies.py  receipts.py
services/notifier/src/notifier/providers/: __init__.py  base.py  future_push.py  pushover.py
services/scheduler/: pyproject.toml
services/scheduler/src/scheduler/: main.py
services/signal-engine/: pyproject.toml
services/signal-engine/src/signal_engine/: __init__.py  config.py  main.py  models.py  service.py
services/signal-engine/src/signal_engine/consumers/: repository.py
services/signal-engine/src/signal_engine/explainability/: __init__.py  builder.py
services/signal-engine/src/signal_engine/features/: __init__.py  fusion.py  kalshi.py
services/signal-engine/src/signal_engine/policies/: __init__.py  rules.py
services/signal-engine/src/signal_engine/ranking/: __init__.py  ranker.py
services/signal-engine/src/signal_engine/scorers/: __init__.py  components.py
services/worker/: pyproject.toml
services/worker/src/kalshi_worker/: main.py
workers/: README.md
(+70 files in other folders)
