[project]
name = "kalshi-signal-desk-api"
version = "0.1.0"
description = "FastAPI shell for Kalshi Signal Desk."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "shared-py",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api_shell*"]
