[project]
name = "kalshi-api"
version = "0.1.0"
description = "FastAPI backend for Kalshi market intelligence."
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20,<1",
  "alembic>=1.13,<2",
  "fastapi>=0.111,<1",
  "greenlet>=3.0,<4",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "sqlalchemy>=2.0,<3",
  "asyncpg>=0.29,<1",
  "pyjwt>=2.9,<3",
  "redis>=5.0,<6",
  "kalshi-client",
  "kalshi-python-common",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
