[project]
name = "scheduler"
version = "0.1.0"
description = "Scheduler and health-check service shell."
requires-python = ">=3.11"
dependencies = ["shared-py"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
